crates/alder-parse/src/snapshots/alder_parse__module__tests__module_with_type.snap
---
source: crates/alder-parse/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Maybe a\n    = Just a\n    | Nothing\n"
---
Module {
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    imports: [],
    values: [],
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 11,
                        },
                    },
                    value: "Maybe",
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 12,
                            },
                            end: Position {
                                line: 3,
                                column: 13,
                            },
                        },
                        value: "a",
                    },
                ],
                ctors: [
                    Ctor {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 7,
                                },
                                end: Position {
                                    line: 4,
                                    column: 11,
                                },
                            },
                            value: "Just",
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 13,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                    Ctor {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 7,
                                },
                                end: Position {
                                    line: 5,
                                    column: 14,
                                },
                            },
                            value: "Nothing",
                        },
                        arguments: [],
                    },
                ],
            },
        },
    ],
    aliases: [],
    binops: [],
}
