crates/alder-parse/src/snapshots/alder_parse__module__tests__module_with_union_then_value.snap
---
source: crates/alder-parse/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Wrap a\n    = Wrap a\n\nf w = w\n"
---
Module {
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
    ),
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 6,
                    column: 1,
                },
                end: Position {
                    line: 7,
                    column: 1,
                },
            },
            value: Value {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 1,
                        },
                        end: Position {
                            line: 6,
                            column: 2,
                        },
                    },
                    value: "f",
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 3,
                            },
                            end: Position {
                                line: 6,
                                column: 4,
                            },
                        },
                        value: Var(
                            "w",
                        ),
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 7,
                        },
                        end: Position {
                            line: 6,
                            column: 8,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "w",
                    },
                },
                annotation: None,
            },
        },
    ],
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: "Wrap",
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 12,
                            },
                        },
                        value: "a",
                    },
                ],
                ctors: [
                    Ctor {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 7,
                                },
                                end: Position {
                                    line: 4,
                                    column: 11,
                                },
                            },
                            value: "Wrap",
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 13,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
            },
        },
    ],
    aliases: [],
    binops: [],
}
