crates/alder-parse/src/snapshots/alder_parse__module__tests__single_let.snap
---
source: crates/alder-parse/src/module.rs
description: let answer = 42
---
Module {
    items: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: Item {
                attributes: [],
                visibility: Private,
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: Var(
                                "answer",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 16,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 42.0,
                                    text: "42",
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ],
    comments: [],
}
