crates/alder-parse/src/snapshots/alder_parse__module__tests__whitespace_only_module.snap
---
source: crates/alder-parse/src/module.rs
description: "\n\n   \n"
---
Module {
    items: [],
}
